# posco_streamlit

./: README.md  api.py  ar_main.py  gitignore  main.py  ngrok.py  output_sample_data.json  output_soil_data.json  prompts.py  pydantic_models.py  pyproject.toml  requirements.txt  test.py  utils.py
